--- a/.github/workflows/Backup to Gitlab.yml
+++ b/.github/workflows/Backup to Gitlab.yml
@@ -16,6 +16,8 @@ jobs:
       # Step 1: Check out the repository
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Fetch full history to avoid shallow update issues
 
       # Step 2: Set up Git with GitLab credentials
       - name: Configure Git to use GitLab
@@ -28,4 +30,3 @@ jobs:
       - name: Force push to GitLab
         run: |
           git push -u gitlab main --force
-
